@@ -181,6 +181,8 @@ public class yuriMod implements EditCardsSubscriber, EditRelicsSubscriber, EditS
     public static final String yuri_WINE_OUTLINE = "relics/outline/Water.png";
     public static final String yuri_GLITCH_BAG = "relics/GlitchBag.png";
     public static final String yuri_GLITCH_BAG_OUTLINE = "relics/outline/GlitchBag.png";
+    public static final String yuri_GLITCH_POWDER = "relics/GlitchPowder.png";
+    public static final String yuri_GLITCH_POWDER_OUTLINE = "relics/outline/GlitchPowder.png";
 
 
     // Character assets
@@ -345,6 +347,7 @@ public class yuriMod implements EditCardsSubscriber, EditRelicsSubscriber, EditS
         BaseMod.addRelicToCustomPool(new BloodyKnife(), AbstractCardEnum.YURI_RED);
         BaseMod.addRelicToCustomPool(new GlassOfWater(), AbstractCardEnum.YURI_PURPLE);
         BaseMod.addRelicToCustomPool(new GlassOfWine(), AbstractCardEnum.YURI_PURPLE);
+        BaseMod.addRelicToCustomPool(new GlitchPowder(), AbstractCardEnum.YURI_PURPLE);
 
 		logger.info("done adding relics!");
 	}
